--- a/src/RTUB.Web/wwwroot/css/hierarchy.css
+++ b/src/RTUB.Web/wwwroot/css/hierarchy.css
@@ -22,6 +22,7 @@
     font-size: 1.0625rem;
     line-height: 1.7;
     color: #e2e2e2;
+    text-align: left;
 }
 
 /* Stage Cards Grid */
@@ -141,6 +142,7 @@
     color: #e2e2e2;
     margin: 0;
     flex: 1;
+    text-align: left;
 }
 
 .hierarchy-description-edit {
